[package]
name = "notion2obsidian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["std", "backtrace"] }
csv = "1.1.6"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.7.0"
tempfile = "3.3.0"
urlencoding = "2.1.2"
walkdir = "2.3.2"
zip = "0.6.3"
